--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
-            <h2 style="font-family: Tajawal;">مشروع لمادة التربية المهنية</h2>
+            <h2 style="font-family: Tajawal;">مشروع لمادة البحث ومصادر</h2>
           </div>
        </div>
       </div>
