--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1 style="font-family: Tajawal;">كيف تطور ذاتك؟</h1>
-          <p style="font-family: Tajawal;">كل ما يحتاجه الفرد لمعرفة كيفية تطوير الذات</p>
+          <h1 style="font-family: Tajawal;">تعريف المكتبات ونشأتها</h1>
+          <p style="font-family: Tajawal;">كل ما يحتاجه الفرد لمعرفة نشأة المكتبات ووظائفها</p>
           <br>
           <a href="./project.html" class="btn btn-default btn-lg" title="">اكتشف</a>
         </div>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
-            <h2 style="font-family: Tajawal;">مشروع لمادة البحث ومصادر</h2>
+            <h2 style="font-family: Tajawal;">مشروع لمادة مهارات البحث ومصادر المعلومات</h2>
           </div>
        </div>
       </div>
