--- a/post1.html
+++ b/post1.html
@@ -20,7 +20,7 @@
   <link href="" rel="stylesheet">
 
 
-  <title>كيف تطور ذاتك؟</title>
+  <title>تعريف المكتبات ونشأتها</title>
 
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
@@ -37,7 +37,7 @@
         </button>
         <a class="navbar-brand" href="./index.html" title="" style="font-family: Tajawal;">
           <img src="./assets/Screen_Shot_2021-01-31_at_2.16.4.png"  class="navbar-logo-img" alt="">
-          كيف تطور ذاتك؟
+          تعريف المكتبات ونشأتها
         </a>
       </div>
 
@@ -59,8 +59,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h1 class="text-center" style="font-family: Tajawal;">أساليب تطوير الذات</h1>
-          <p style="text-align: center; font-family: Tajawal;">قراءة كتاب يومياً: عند قراءة كتاب كل يوم سيتغذى العقل بالعلم والمعرفة، حيث إن القراءة تجعل الشخص أكثر حكمة ودراية. تَعلُّم لغة جديدة: من المفضّل أن يتعلم الشخص لغات جديدة بالإضافة إلى لغته الأساسية، ويقوم بتطوير مهاراته اللغوية، مما يجعله أكثر انفتاحاً على العالم. ممارسة هوايات جديدة: حتى يطوِّر الفرد من نفسه عليه أن يتعلم ويمارس هوايات جديدة، كتعلّم الطبخ، أو تصميم مواقع إلكترونية، أو تعلم المبارزة، أو التزلج على الجليد، أو كرة القدم، وغيرها. الحصول على دورات في مجالات مختلفة: الدورات وورش العمل وسيلة مهمّة للتعلُّم واكتساب مهارات جديدة. إنشاء غرفة مُلهمة: فإن تخصيص الشخص لغرفة ملهمة له ستشعره بالأمان وتُرفه مستوى الطاقة الإيجابية لديه، مما يساعده على التركيز وتطوير مهاراته. التغلُّب على المخاوف: إذا أراد الفرد أن يطوِّر من نفسه فعليه أن يتغلب على مخاوفه، وأن يعمل على الجانب الإيجابي حتى يستطيع الوصول إلى هدفه. ممارسة العادات الجيدة: على الفرد أن ينظر إلى الجوانب الجيدة في شخصيته وعاداته ويعمل على تطويرها، مثلاً إذا كان ينام بوقت مبكر، أو يمارس الرياضة، أو يقرأ الكتب، فعليه أن يحافظ على هذا الجزء في حياته ويقوم بتطويره. وضع قائمة مهام: قائمة المهام أمر مهم جداً لمن يسعى لتطوير ذاته، حتى يُحدد ما أُنجز ويحقق لديه الرغبة في إنجاز ما تبقى. الخروج من منطقة الراحة: حيث إن التطوّر والتنمية تحتاج إلى المزيد من الجدِّ والتعب، إذ إن الراحة لن تُمكن الفرد من التقدم بشيء إن لم يحاول ويجتهد ليصل إلى ما يطمح له. التخلُّص من العادات السلبية: على الفرد أن يعترف بعيوبه أمام نفسه ويحاول التخلُّص من أي عادات سيئة يُمكنها إعاقة تطوره. تعزيز روح المنافسة: لن يشعر الإنسان بحاجته إلى تطوير ذاته إلا إذا كان هناك خصم أمامه يحتاج إلى أن ينافسه على أمر ما، فيبذل قصارى جهده حتى يكون هو الأفضل في النهاية.</p>
+          <h1 class="text-center" style="font-family: Tajawal;">نشأة المكتبات  </h1>
+          <p style="text-align: center; font-family: Tajawal;">تاريخ ونشأة المكتبة العامة أ – المكتبة العامة في الحضارة العربية الإسلامية : كانت المكتبات العامة في الإسلام من أهم المؤسسات الثقافية والاجتماعية التي يفتخر بها الإسلام وهي المقياس الحقيقي لرقي الشعوب , وإن كثرة ارتيادها واستخدامها دليل على ثقافة الشعب وتعلمه وحبه للعلم وكانت هذه المكتبات منتشرة في معظم أنحاء البلاد الإسلامية وكثيرا ما كانت تقدم الحبر والورق مجانا للقراء وكان في قسم كبير منه مرشدون يساعدون القراء في الحصول على المصادر والكتب , والمطالعة فيها حرة , وكان عدد من العلماء والوزراء والأغنياء يوقفون بعد موتهم مكتباتهم على مدنهم كما فعل صاحب بن عباد الذي أوقف مكتبته على مدينة الري فأصبحت مكتبة عامة . ومن هذه المكتبات المكتبة التي أنشأها أبو علي بن سوار الكاتب في زمن عضد الدولة البويهي المتوفي عام 372 هـ فقد بنى دار الكتب في مدينة رام هرمز على شاطئ الخليج العربي كما بنى دارا ً أخرى في البصرة وجعلوا فيها اجراء على من قصدهما ولزم القراءة والنسخ فيهما وترجح المصادر أن مكتبة البصرة هذه هي المكتبة التي يرد ذكرها في مقامات الحريري على أنها منتدى المتأدبين وملتقى القاطنين والمغتربين أما مكتبة سابور بن اردشير فقد أسسها وزير بهاء الدولة البويهي سابور وسميت باسمه , وكان ذلك عام 382 هـ وسماها (دار العلم) ووقفها على العلماء ونقل إليها كتبا كثيرة وبلغ عدد كتبها 10400 مجلد في أصناف المعرفة المختلفة وقد ازدهرت ازدهارا ً كبيرا ً وذاعت شهرتها وخدماتها . أما مكتبة بني عمار في طرابلس الشام فقد اهتم بنو عمار بالعمل على تنميتها وكان لهم وكلاء يجوبون أقطار العالم الإسلامي بحثا عن الكتب والمخطوطات النادرة وكانت كتبها مزخرفة ومحلاة بالذهب والفضة وقيل أن عدد كتبها بلغ ثلاث ملايين مجلد إبان عزها ومجدها منها خمسون ألف نسخة من القرآن الكريم وثمانون ألف نسخة من التفاسير وقد أحرق الصليبيون هذه المكتبة عندما احتلوا طرابلس عام 502 هـ / 1009 م وهناك من يعد (بيت الحكمة) في بغداد ودار العلم بالقاهرة من المكتبات العامة وقد أنشأ الأولى أبو جعفر المنصور وتوسعت في عصر الرشيد وازدهرت في عهد المأمون أما الثانية فقد أسسها الخليفة الفاطمي الحاكم بأمر الله وجعلها مؤسسة علمية غنية بالعلوم والآداب لمنافسة مكتبة بيت الحكمة في بغداد وقد ذكر ابن خلكان في كتابه وفيات الأعيان أن عدد الكتب فيها وصل إلى مليون وستمائة ألف كتاب وكانت المكتبات الإسلامية من أهم المؤسسات التي كان لها الدور الأكبر في نشر الثقافة والمعرفة وارتبط ظهورها بعوامل عديدة وهي : 1- ظهور حركة التدوين التي اهتمت في البداية بتدوين الأحاديث والسيرة النبوية ثم اتجهت إلى تدوين التراث العربي الإسلامي 2-ظهور حركة التأليف 3-ظهور حركة الترجمة 4-انتشار الورق وظهور طبقة الوراقين 5-اتصال المسلمين بالحضارات الأجنبية التي كانت منتشرة في مختلف البلدان التي تم افتتاحها ب – المكتبة العامة في أوربا : تمثل المكتبات العامة الأوربية أحد مصادر الثقافة والإشعاع في أوروبا الحديثة , ومصطلح المكتبات العامة على اعتبارها مؤسسة ثقافية تمتلكها الدولة وتفتح أبوابها للاستخدام العام وتمول عن طريق الضرائب لم يظهر في الساحة الأوربية إلا في أواخر القرن التاسع عشر , وتقع المكتبات العامة في أوروبا في فئتين كبيرتين تسمى الأولى (مكتبات البحث) أو (المكتبات العلمية) وتسمى الثانية (المكتبات الشعبية) , وقد تطورت فكرة المكتبة العامة عبر العصور وتحت تأثير عوامل عديدة ذلك أن الثورة الصناعة قد جذبت أعداد كبيرة من العمال الصناعيين إلى المدن , فظهرت الحاجة إلى تثقيفهم ثقافة مهنية وثقافة عامة مما أدى إلى تأسيس مكتبات مهنية وعامة فمثلا المكتبات العامة في انجلترا بدأت مع موافقة البرلمان الإنجليزي عام 1847م بتعيين لجنة المكتبات العامة لبحث أفضل السبل لتأمين مكتبات عامة في البلاد , وقامت اللجنة بدراسة الموضوع وقدمت تقريرها عام 1849م واقترحت تأسيس مكتبات عامة مجانية تعمل على دعمها , ووصل عدد المدن التي أسست فيها مكتبات عامة بموجب قانون 1850م إلى 300 مدينة وذلك عام 1900م . وفي ألمانيا فتحت المكتبات العامة بشكل واسع بعد عام 1870م , وقد وصل عدد المكتبات في برلين وما حولها إلى 28 مكتبة شعبية لخدمة العمال عام 1900م أما روسيا فهي أكثر الشعوب اهتماما ً بالمكتبات , وتشير الإحصائيات الروسية الحديثة أن الاتحاد السوفياتي سابقا امتلك في أواخر الستينيات من هذا القرن حوالي 40 ألف مكتبة من جميع الأنواع إلا أن الكثير من هذه المكتبات صغيرة إلى حد أن المكتبة لا تحتوي إلا عددا محدودا من الكتب كما أن قسما كبيرا منها نسخ مكررة</p>
           
           <div class="section-container-spacer">
             <img src="./assets/images/Untitled design٢٢.png" alt="" class="img-responsive reveal-content" data-action="zoom">
@@ -99,7 +99,7 @@
 
      
       <div class="col-xs-12">
-        <h3 style="font-family: Tajawal;">كيف تطور ذاتك؟</h3>
+        <h3 style="font-family: Tajawal;">تعريف المكتبات ونشأتها  </h3>
 
         <div class="row">
           <div class="col-xs-12 col-sm-7">
