--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
   <link href="" rel="stylesheet">
 
 
-  <title>كيف تطور ذاتك؟</title>
+  <title>تعريف المكتبات ونشأتها</title>
 
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
@@ -37,7 +37,7 @@
         </button>
         <a class="navbar-brand" href="./index.html" title="" style="font-family: Tajawal;">
           <img src="./assets/Screen_Shot_2021-01-31_at_2.16.4.png"  class="navbar-logo-img" alt="">
-          كيف تطور ذاتك؟
+          تعريف المكتبات ونشأتها
         </a>
       </div>
 
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h1 class="text-center" style="font-family: Tajawal;">الهدف من الموقع</h1>
-          <p style="font-family: Tajawal; text-align: center;">يهدف موقع "كيف تطور ذاتك؟" الى تعليم وتهيئة الطالبات في جميع ما يخص تطوير الذات وبناء الشخصية</p>
+          <p style="font-family: Tajawal; text-align: center;">يهدف الموقع الى تعليم وتثقيف الطالبات في جميع ما يخص تعريف المكتبات ونشأتها</p>
           
           <div class="section-container-spacer">
             <img src="./assets/images/Untitled design٢٢.png" alt="" class="img-responsive reveal-content" data-action="zoom">
@@ -99,7 +99,7 @@
 
      
       <div class="col-xs-12">
-        <h3 style="font-family: Tajawal;">كيف تطور ذاتك؟</h3>
+        <h3 style="font-family: Tajawal;">كتعريف المكتبات ونشأتها</h3>
 
         <div class="row">
           <div class="col-xs-12 col-sm-7">
