--- a/post2.html
+++ b/post2.html
@@ -20,7 +20,7 @@
   <link href="" rel="stylesheet">
 
 
-  <title>كيف تطور ذاتك؟</title>
+  <title>تعريف المكتبات ونشأتها</title>
 
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
@@ -37,7 +37,7 @@
         </button>
         <a class="navbar-brand" href="./index.html" title="" style="font-family: Tajawal;">
           <img src="./assets/Screen_Shot_2021-01-31_at_2.16.4.png"  class="navbar-logo-img" alt="">
-          كيف تطور ذاتك؟
+          تعريف المكتبات ونشأتها
         </a>
       </div>
 
@@ -59,8 +59,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h1 class="text-center" style="font-family: Tajawal;">مفهوم تطوير الذات</h1>
-          <p style="font-family: Tajawal; text-align: center;">يُعرَّف تطوير الذات بأنَّه الجهود المذولة في تطوير قدرات النفس وإمكاناتيها، ذلك من خلال تعلُم مهارات جديدة والتخلص من العادات السيئة  </p>
+          <h1 class="text-center" style="font-family: Tajawal;">مفهوم المكتبات </h1>
+          <p style="font-family: Tajawal; text-align: center;"> تعريف المكتبة العامة هى مؤسسة ثقافية تنشئها الدولة أو السلطات المحلية, وتزودها بكافة الأوعية التي تعين على كسب المعرفة و التثقيف الذاتي الحر, والإحاطة بالمعلومات الجارية المتعلقة بالمجتمع وما يجرى فى العالم من أحداث و تطورات.. وتقديم كل ذلك لكافة المواطنين دون مقابل وبغض النظر عن الجنس أو السن او النوع او المستوى المهنى والعلمى...اذن فهي مؤسسة شعبية تسعى إلى إنارة الطريق أمام الشعب وتثقيفه بأنواع الثقافات المختلفة والخبرات المتنوعة وخلق المواطن المستنير القادر على خدمة نفسه وخدمة المجتمع الذي يعيش فيه]</p>
           
           <div class="section-container-spacer">
             <img src="./assets/images/Untitled design٢٢.png" alt="" class="img-responsive reveal-content" data-action="zoom">
@@ -99,7 +99,7 @@
 
      
       <div class="col-xs-12">
-        <h3 style="font-family: Tajawal;">كيف تطور ذاتك؟</h3>
+        <h3 style="font-family: Tajawal;">تعريف المكتبات ونشأتها</h3>
 
         <div class="row">
           <div class="col-xs-12 col-sm-7">
