--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <img src="./assets/images/Untitled design1.png" alt="" class="reveal img-responsive reveal-content image-center">
           <a href="#" style="font-family: Tajawal; color: black; font-size: 25px;">انواع المكتبات  </a> 
           <br> 
-          <p style="font-family: Tajawal;">تتراوح ما بين المكتبات الوطنية والخاصة والاكاديمية والمتخصصة، المدرسية،العامج والناطقة</p>
+          <p style="font-family: Tajawal;">تتراوح ما بين المكتبات الوطنية والخاصة والاكاديمية والمتخصصة، المدرسية،العامة والناطقة</p>
           
         </div>
       </div>
